Fix line break in buttons; move button styles to blocks/button.scss

--- a/assets/src/css/blocks/button.scss
+++ b/assets/src/css/blocks/button.scss
@@ -8,6 +8,38 @@
 
 
 
+
+.wp-element-button,
+.wp-block-button__link {
+    // typography
+    text-shadow: 0 1px 5px rgba(0,0,0,.5);
+
+    // other styling
+    transition: color .3s linear, background-color .3s linear, border-color .3s linear;
+    cursor: pointer;
+    box-shadow: 0 1px 10px 0 rgba(0,0,0,.15);
+
+    // dimensions
+    display: block;
+    margin-bottom: 0;
+    padding: .75rem 1.5rem;
+
+    // positioning
+    position: relative;
+    top: 0;
+    left: 0;
+
+    &:hover {
+        box-shadow: 0 10px 20px rgba(0,0,0,.15), 0 6px 6px rgba(0,0,0,.10);
+    }
+
+    &:active {
+        top: 2px;
+    }
+}
+
+
+
 /**
  * .is-style-navigation-faux-anchor
  */
