--- a/assets/src/css/frontend/site/_basics.scss
+++ b/assets/src/css/frontend/site/_basics.scss
@@ -60,45 +60,3 @@ b,
 strong {
     font-weight: 700;
 }
-
-
-
-/**
- * Basic elements
- *
- * These basic elements are partly designed via settings contained in the theme.json file.
- * Settings that exceed the current capabilities of theme.json (as of June 2023) and/or are necessary for reasons of compatibility can be found at this point.
- */
-
-
-
-/** theme.json element: button */
-
-.wp-element-button,
-.wp-block-button__link {
-    // typography
-    text-shadow: 0 1px 5px rgba(0,0,0,.5);
-
-    // other styling
-    transition: color .3s linear, background-color .3s linear, border-color .3s linear;
-    cursor: pointer;
-    box-shadow: 0 1px 10px 0 rgba(0,0,0,.15);
-
-    // dimensions
-    display: inline-block;
-    margin-bottom: 0;
-    padding: .75rem 1.5rem;
-
-    // positioning
-    position: relative;
-    top: 0;
-    left: 0;
-
-    &:hover {
-        box-shadow: 0 10px 20px rgba(0,0,0,.15), 0 6px 6px rgba(0,0,0,.10);
-    }
-
-    &:active {
-        top: 2px;
-    }
-}
